--- a/contact.html
+++ b/contact.html
@@ -38,15 +38,15 @@
             </div>
             <div class="col-md-6">
               <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                <label for="exampleFormControlInput1" class="form-label">Email Address</label>
+                  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Enter Email">
               </div>
               <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                <label for="exampleFormControlTextarea1" class="form-label">What is this regarding?</label>
                   <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
               </div>
               <div class="col-auto">
-                <button type="submit" class="btn btn-primary mb-3">Confirm identity</button>
+                <button type="submit" class="btn btn-primary mb-3">Submit</button>
               </div>
             </div>
           </div>
