--- a/about.html
+++ b/about.html
@@ -22,8 +22,8 @@
         </ul>
     
          <div class="row justify-content-center mt-4"> 
-          <h3 class="text-center">Hey There!</h3>
-          <h4 class="text-center">my name is Joesph Ambrose</h4>
+          <h3 class="text-center">Hey There</h3>
+          <h4 class="text-center">My name is Joesph Ambrose</h4>
          </div>  
         
       <div class="row justify-content-center mt-4">
