--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
         <div class="card border-0 mb-8 bg-dark text-white">
           <div class="row card-body">
             <div class="col-md-6">
-              <h5 class="card-title">Why should you connect?</h5>
+              <h5 class="card-title">Why should we connect?</h5>
               <p class="card-text">With my vast experience within User Experience, User Interface, Industrial Design and Coding I can be an all in one stop from start to finish. If you are wanting to create something meaningful and impactful to the end user then look no further. Let's start a conversion today to help create a plan for tomorrow! Fill out the form with your email and a basic idea of what you are looking to accomplish and we will reach out to you within 1 - 2 business days. Talk to you soon!</p>
             </div>
             <div class="col-md-6">
