--- a/about.html
+++ b/about.html
@@ -11,13 +11,13 @@
 
         <ul class="nav justify-content-center sticky-top bg-secondary bg-gradient text-white p-2">
           <li class="nav-item">
-            <a class="nav-link text-white" href="index.html">Home</a>
+            <a class="nav-link text-white fs-5" href="index.html">Home</a>
           </li>  
           <li class="nav-item">
-            <a class="nav-link text-white" href="contact.html">Contact</a>
+            <a class="nav-link text-white fs-5" href="contact.html">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active text-white" href="about.html">About</a>
+            <a class="nav-link active text-white fs-5" href="about.html">About</a>
           </li>
         </ul>
     
