--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
           <a class="nav-link active text-white fs-5" href="index.html">Home</a>
         </li>  
         <li class="nav-item">
-          <a class="nav-link text-white" href="contact.html">Contact</a>
+          <a class="nav-link text-white fs-5" href="contact.html">Contact</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="about.html">About</a>
+          <a class="nav-link text-white fs-5" href="about.html">About</a>
         </li>
       </ul>
     
