--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <div class="row card-body">
             <div class="col-md-6">
               <h5 class="card-title">Polaroid Cloud Project</h5>
-              <p class="card-text">In this assignment I was given the design I needed to build out. I received a Figma file with the assets that needed to be included and built the site using HTML and CSS. This project helped me get a better understanding of how to take website schematics and turn it into a functioning page.              </p>
+              <p class="card-text">In this assignment I was given the design I needed to build out. I received a Figma file with the assets that needed to be included and built the site using HTML and CSS. This project helped me to gain a better understanding of how to take website schematics and turn it into a functioning page.</p>
               <p class="card-text"><small class="text-secondary">Project duration: 5 days</small></p>
             </div>
             <div class="col-sm-6">
@@ -52,7 +52,7 @@
             </div>
             <div class="col-md-6">
               <h5 class="card-title">Incident Map</h5>
-              <p class="card-text">For this project I needed to design and create an incident map for first responders. This would give them and the public up to date information on impacted areas of where the storm hit and buildings that were affected. For this process I created a prototype in Figma and based on the figma design I built it out in HTML and CSS.</p>
+              <p class="card-text">For this project, I needed to design and create a weather incident map for first responders. This would give emergency workers and the general public up to date information on impacted areas of where a storm hit and which buildings may have been affected. For this process I created a prototype in Figma. Then, based on the figma design, I built it out in HTML and CSS.</p>
               <p class="card-text"><small class="text-secondary">Project duration: 5 days</small></p>
             </div>
           </div>
@@ -66,7 +66,7 @@
           <div class="row card-body">
             <div class="col-md-6">
               <h5 class="card-title">Blog Post</h5>
-              <p class="card-text">In this project I was able to build out a blog post design within Figma. After that I wrote up a post for the blog for it. I recreated my designs from Figma in HTML and styled it with CSS. After that I filled in my blog post and hosted it on Netlify.              </p>
+              <p class="card-text">In this project I was able to build out a blog post design within Figma. After that I created a written post for the blog. I recreated my designs from Figma in HTML and styled it with CSS. Finally, I filled it in with the blog post I had written and hosted it on Netlify.</p>
               <p class="card-text"><small class="text-secondary">Project duration: 5 days</small></p>
             </div>
             <div class="col-sm-6">
