--- a/about.html
+++ b/about.html
@@ -22,8 +22,8 @@
         </ul>
     
          <div class="row justify-content-center mt-4"> 
-          <h3 class="text-center">Hey There</h3>
-          <h4 class="text-center">My name is Joesph Ambrose</h4>
+          <h3 class="text-center">Hey There!</h3>
+          <h4 class="text-center">I’m Joesph Ambrose - Designer, Coder, Crafter</h4>
          </div>  
         
       <div class="row justify-content-center mt-4">
@@ -35,7 +35,7 @@
               </div>
               <div class="col-md-6">
                 <h5 class="card-title">A little more about me</h5>
-                <p class="card-text">I’m a UX/UI designer. I have been involved in design for a little over 8 years now and have been working professionally in the field for the past 5 years. I’ve gained experience working in several related areas including: Fine Arts, Interior Design, Marketing, and Product Management. My bachelor’s degree is in Industrial Design which gave me a diverse portfolio of experience and knowledge. Throughout my personal journey, there has been a multitude of different inspirations and experiences that I now get to utilize and incorporate into the designs I create. My desire to understand how people think and the way users interact with things pushes me to continue creating, refining and improving projects I work on!</p>
+                <p class="card-text">I’m a UX/UI designer with a diverse academic background. I have been involved in design for a little over 8 years now and have been working professionally in the field for the past 5 years. I’ve gained experience working in several related areas including: Fine Arts, Interior Design, Marketing, and Product Management. My bachelor’s degree is in Industrial Design which gave me a well-rounded portfolio of experience and knowledge. Throughout my personal journey, there have been a multitude of different inspirations and experiences that I now get to utilize and incorporate into the designs I create. My desire to understand how people think and the way users interact with things pushes me to continue creating, refining and improving projects I work on!</p>
               </div>
             </div>
           </div>
