--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     
     <div class="row justify-content-center mt-4"> 
       <h3 class="text-center">Want to know more?</h3>
-      <h4 class="text-center">Lets connect</h4>
+      <h4 class="text-center">Let’s Connect</h4>
     </div>  
         
     <div class="row justify-content-center mt-5">
@@ -32,7 +32,7 @@
           <div class="row card-body">
             <div class="col-md-6">
               <h5 class="card-title">Why should we connect?</h5>
-              <p class="card-text">With my vast experience within User Experience, User Interface, Industrial Design and Coding I can be an all in one stop from start to finish. If you are wanting to create something meaningful and impactful to the end user then look no further. Let's start a conversion today to help create a plan for tomorrow! Fill out the form with your email and a basic idea of what you are looking to accomplish and we will reach out to you within 1 - 2 business days. Talk to you soon!</p>
+              <p class="card-text">With my professional and academic experience within the fields of User Experience, User Interface Design, Industrial Design and Coding, I can provide insight on the design process from beginning to end. If you are wanting to create something that will be meaningful and impactful to your user base, then look no further. Let's start a conversation today to help create a plan for tomorrow! Fill out the form with your email address and a basic idea of what you are looking to accomplish and we will reach out to you within 2 - 4 business days. Talk to you soon!</p>
             </div>
             <div class="col-md-6">
               <div class="mb-3">
